<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">SOBright</string>
    <string name="Title">Solar Energy</string>
    <string name="title_home">Home</string>
    <string name="title_maps">Maps</string>
    <string name="title_profile">Profile</string>

    <string name="Description">Solar energy is a resource detection system that identifies locations based on specific points.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>

    <string name="loginDescription">Login and enjoy our features!</string>
    <string name="RegisterDescription">Register and enjoy our features!</string>
    <string name="Forgot_password">Lupa Password?</string>
    <string name="or">or</string>
    <string name="title_location">Location</string>

    <string name="user_name">Nirmala Anindtya</string>
    <string name="email_user">Nirmala@gmail.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_calculation">Calculation</string>
    <string name="hasil">Result\n</string>
    <string name="hitung">Calculate\n</string>
    <string name="penghematan_energy">Energy Savings</string>
    <string name="satuan_meter">m2</string>
    <string name="year">Year</string>
    <string name="number">2023</string>
    <string name="history">History</string>
    <string name="chart">Energy Inventory Chart</string>
    <string name="TotalEnergy">Total Energy</string>
    <string name="Greeting">Good Afternoon,</string>
    <string name="HargaperKwh">Rp 0</string>
    <string name="judul_harga_per_kwh">Price /Kwh</string>
    <string name="contoh_energy">0Kwh/m2</string>
    <string name="rupiah">Rp</string>
</resources>