<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.sobright.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_location"
        android:name="com.example.sobright.ui.location.LocationFragment"
        android:label="@string/title_maps"
        tools:layout="@layout/fragment_location" />

    <fragment
        android:id="@+id/navigation_calculation"
        android:name="com.example.sobright.ui.calculation.CalculationFragment"
        android:label="@string/title_calculation"
        tools:layout="@layout/fragment_calculation"/>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.sobright.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>