<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.calculation.CalculationFragment">

    <TextView
        android:id="@+id/tv_calculation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/title_calculation"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/tosca"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_login"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/img_loc"
        app:layout_constraintTop_toBottomOf="@id/tv_calculation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_penghematan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/penghematan_energy"
        android:textColor="@color/tosca"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@id/iv_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="353dp"
        android:layout_height="180dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/iv_login"
        app:layout_constraintEnd_toEndOf="@id/tv_penghematan"
        app:layout_constraintTop_toBottomOf="@id/tv_penghematan">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_tinggi"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_border"
                android:drawablePadding="8dp"
                android:fontFamily="@font/poppins_regular"
                android:hint="Length"
                android:inputType="number"
                android:padding="8dp"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_lebar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_border"
                android:drawablePadding="8dp"
                android:fontFamily="@font/poppins_regular"
                android:hint="Width"
                android:inputType="number"
                android:padding="8dp"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_hitung1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/hitung"
            android:textSize="14dp"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins_regular"
            android:background="@drawable/btn"
            app:backgroundTint="@null"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/textHasil1"
                android:layout_width="78dp"
                android:layout_height="45dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/hasil"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_satuan"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/satuan_meter"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayout1"
        app:layout_constraintStart_toStartOf="@id/iv_login"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="169dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black"
                    android:text="Generated Energy"
                    android:textSize="14dp" />

                <!-- Width of EditText -->
                <TextView
                    android:id="@+id/tv_energy"
                    android:layout_width="170dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:padding="8dp"
                    android:text="@string/contoh_energy"
                    android:textColor="@color/tosca"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="169dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="left"
                    android:text="@string/judul_harga_per_kwh"
                    android:textSize="14dp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tv_harga"
                    android:layout_width="170dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:padding="8dp"
                    android:text="@string/HargaperKwh"
                    android:textColor="@color/tosca"
                    android:textSize="20sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Buttons and TextView remain the same -->
        <Button
            android:id="@+id/btn_hitung2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/hitung"
            android:textSize="14dp"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins_regular"
            android:background="@drawable/btn"
            app:backgroundTint="@null"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_rupiah"
                android:layout_width="38dp"
                android:layout_height="59dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/rupiah"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textHasil2"
                android:layout_width="90dp"
                android:layout_height="59dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/hasil"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>