<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.login.LoginActivity">

    <!--image login-->
    <ImageView
        android:id="@+id/iv_login"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--title login-->
    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/login"
        android:textColor="@color/tosca"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_login" />
        <!--android:textAppearance="@style/TextAppearance.AppCompat.Title"-->

    <!--sub title login-->
    <TextView
        android:id="@+id/tv_loginDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/RegisterDescription"
        android:fontFamily="@font/poppins_regular"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/tv_login"
        app:layout_constraintStart_toStartOf="@+id/tv_login"
        app:layout_constraintTop_toBottomOf="@+id/tv_login"  />

    <!--layout input data-->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/tv_loginDescription"
        app:layout_constraintStart_toStartOf="@+id/tv_loginDescription"
        app:layout_constraintTop_toBottomOf="@+id/tv_loginDescription">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_border"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="8dp"
            android:fontFamily="@font/poppins_regular"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textSize="14dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_border"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:fontFamily="@font/poppins_regular"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textSize="14dp"  />

        <TextView
            android:id="@+id/tv_forgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="right"
            android:text="@string/Forgot_password" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/tosca"
            android:text="@string/login"
            android:textAllCaps="false"
            android:background="@drawable/btn"
            app:backgroundTint="@null"
            android:fontFamily="@font/poppins_semibold"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/or"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_googleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="Google Login"
        android:src="@drawable/google"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_or" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>