<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <!--Greeting-->
    <LinearLayout
        android:id="@+id/linearGreeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_greeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/Greeting"
                android:textColor="@color/tosca"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/user_name"
                android:textSize="16dp"
                android:textColor="@color/black" />
        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_home"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/img_user" />

    </LinearLayout>

    <!--Energy Solar-->
    <LinearLayout
        android:id="@+id/linearEnergy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearGreeting">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/chart"
            android:textSize="16dp"
            android:textColor="@color/tosca" />

        <ImageView
            android:id="@+id/barchart"
            android:layout_width="359dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:src="@drawable/iv_barchart" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/TotalEnergy"
            android:textSize="16dp"
            android:textColor="@color/tosca" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:background="@color/tosca"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_totalEnergy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent = "true"/>
    </LinearLayout>

    <!--History-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearEnergy">

        <TextView
            android:id="@+id/tv_history_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/history"
            android:textColor="@color/tosca"
            android:textSize="16dp" />

        <!-- CardView for History -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="20dp"

            app:layout_constraintTop_toBottomOf="@+id/linearEnergy">



            <!-- CardView for History 1 -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:background="@drawable/edit_text_border">

                    <!-- ImageView for History 1 -->
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="63dp"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/ic_loc" />

                    <!-- Sample Data for History 1 -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Malioboro"
                            android:textSize="16sp"
                            android:fontFamily="@font/poppins_semibold"
                            android:textColor="@color/tosca" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Energi yang dihasilkan : 100 kWh/m2 "
                            android:textSize="14dp"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Luas = 30 m2"
                            android:textSize="14dp"
                            android:textColor="@color/black" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- CardView for History 2 -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:background="@drawable/edit_text_border">

                    <!-- ImageView for History 2 -->
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="72dp"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/ic_loc" />

                    <!-- Sample Data for History 2 -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Malioboro"
                            android:textSize="16sp"
                            android:fontFamily="@font/poppins_semibold"
                            android:textColor="@color/tosca" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Energi yang dihasilkan : 200 kWh/m2 "
                            android:fontFamily="@font/poppins_regular"
                            android:textSize="14dp"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Luas = 30 m2"
                            android:fontFamily="@font/poppins_regular"
                            android:textSize="14dp"
                            android:textColor="@color/black" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>